event page, joined event dto
